Feat: 상품 관련 테스트 추가