@@ -55,7 +55,7 @@ class QueryProductTagServiceImplTest {
         String name1 = "행복한";
         String name2 = "슬픈";
 
-        List<ProductTag> productTags = Arrays.asList(
+        List<ProductTag> productTags = List.of(
                 ProductTag.create(product, Tag.builder().name(name1).build()),
                 ProductTag.create(product, Tag.builder().name(name2).build())
         );
